--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "pnpm recursive --filter library-front run dev",
-    "build": "pnpm recursive --filter library-front run build",
+    "dev": "pnpm recursive --filter library-front-react run dev",
+    "build": "pnpm recursive --filter library-front-react run build",
     "serve": "pnpm recursive --filter library-node run dev"
   },
   "keywords": [],
